--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<head>
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.yellow-amber.min.css" />
+  <title>guitars</title>
+</head>
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Guitars</span>
+      </div>
+    </header>
+    <main class="mdl-layout__content">
+      <h1>how many Guitars</h1>
+      <img src="./images/cat-guitar.gif" alt="style" />
+      <form action="#">
+        <p>Guitars</p>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="guitar" step=".01" />
+          <label class="mdl-textfield__label" for="radius">enter guitars here</label>
+          <span class="mdl-textfield__error">Enter how many Guitar</span>
+        </div>
+      </form>
+      <br />
+      <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+        onclick="calculate()">
+        type
+      </button>
+      <br />
+      <div id="guitar"></div>
+    </main>
+  </div>
+</body>
 </html>
+
