--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <br />
       <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
         onclick="calculate()">
-        type
+        calculate
       </button>
       <br />
       <div id="guitar"></div>
