--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p>Guitars</p>
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="guitar" step=".01" />
-          <label class="mdl-textfield__label" for="radius">enter guitars here</label>
-          <span class="mdl-textfield__error">Enter how many Guitar</span>
+          <label class="mdl-textfield__label" for="guitar">enter guitars here</label>
+          <span class="mdl-textfield__error">Enter how many Guitars</span>
         </div>
       </form>
       <br />
